@@ -24,7 +24,12 @@
 
 package com.jaeksoft.searchlib.statistics;
 
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
 import java.io.IOException;
+import java.io.ObjectInputStream;
+import java.io.ObjectOutputStream;
 import java.util.LinkedList;
 
 import javax.xml.xpath.XPathExpressionException;
@@ -50,18 +55,27 @@ public abstract class StatisticsAbstract {
 	private StatisticTypeEnum type;
 
 	public StatisticsAbstract(StatisticTypeEnum type, boolean writeToLog,
-			int maxRetention) {
+			int maxRetention, File statDir) throws IOException,
+			ClassNotFoundException {
 		this.type = type;
 		this.writeToLog = writeToLog;
 		this.maxRetention = maxRetention;
 		aggregateList = new LinkedList<Aggregate>();
 		currentAggregate = null;
 		aggregateArray = null;
+		load(statDir);
 	}
 
 	public abstract Aggregate newAggregate(long startTime);
 
 	public abstract StatisticPeriodEnum getPeriod();
+
+	private void addAggregate(Aggregate aggregate) {
+		aggregateList.addLast(aggregate);
+		if (aggregateList.size() > maxRetention)
+			aggregateList.removeFirst();
+		aggregateArray = null;
+	}
 
 	public void add(Timer timer) {
 		synchronized (aggregateList) {
@@ -72,10 +86,7 @@ public abstract class StatisticsAbstract {
 					System.out.println(type + " - " + getPeriod().getName()
 							+ " - " + currentAggregate);
 				currentAggregate = newAggregate(timer.getStartTime());
-				aggregateList.addLast(currentAggregate);
-				if (aggregateList.size() > maxRetention)
-					aggregateList.removeFirst();
-				aggregateArray = null;
+				addAggregate(currentAggregate);
 			}
 			currentAggregate.add(timer);
 		}
@@ -95,9 +106,9 @@ public abstract class StatisticsAbstract {
 	}
 
 	final protected static StatisticsAbstract fromXmlConfig(XPathParser xpp,
-			Node node) throws InstantiationException, IllegalAccessException,
-			ClassNotFoundException, XPathExpressionException, DOMException,
-			IOException {
+			Node node, File statDir) throws InstantiationException,
+			IllegalAccessException, ClassNotFoundException,
+			XPathExpressionException, DOMException, IOException {
 
 		if (node == null)
 			return null;
@@ -119,15 +130,67 @@ public abstract class StatisticsAbstract {
 			throw new XPathExpressionException(
 					"maxRetention must be greater than 0.");
 		if (period == StatisticPeriodEnum.MONTH)
-			return new MonthStatistics(type, writeToLog, maxRetention);
+			return new MonthStatistics(type, writeToLog, maxRetention, statDir);
 		else if (period == StatisticPeriodEnum.DAY)
-			return new DayStatistics(type, writeToLog, maxRetention);
+			return new DayStatistics(type, writeToLog, maxRetention, statDir);
 		else if (period == StatisticPeriodEnum.HOUR)
-			return new HourStatistics(type, writeToLog, maxRetention);
+			return new HourStatistics(type, writeToLog, maxRetention, statDir);
 		else if (period == StatisticPeriodEnum.MINUTE)
-			return new MinuteStatistics(type, writeToLog, maxRetention);
+			return new MinuteStatistics(type, writeToLog, maxRetention, statDir);
 		else
 			throw new XPathExpressionException(
 					"Wrong periode name. Should be day, hour, or minute.");
+	}
+
+	private File getStatFile(File statDir) {
+		return new File(statDir, type.name().replace(' ', '_') + "_"
+				+ getPeriod().getName().replace(' ', '_'));
+	}
+
+	public void load(File statDir) throws IOException, ClassNotFoundException {
+		File file = getStatFile(statDir);
+		if (!file.exists())
+			return;
+		FileInputStream fis = null;
+		ObjectInputStream ois = null;
+		try {
+			fis = new FileInputStream(file);
+			ois = new ObjectInputStream(fis);
+			synchronized (aggregateList) {
+				int size = ois.readInt();
+				while (size-- > 0) {
+					Aggregate aggr = new Aggregate();
+					aggr.readExternal(ois);
+					addAggregate(aggr);
+				}
+			}
+		} finally {
+			if (ois != null)
+				ois.close();
+			if (fis != null)
+				fis.close();
+		}
+	}
+
+	public void save(File statDir) throws IOException {
+		File file = getStatFile(statDir);
+		if (file.exists())
+			file.delete();
+		FileOutputStream fos = null;
+		ObjectOutputStream oos = null;
+		try {
+			fos = new FileOutputStream(file);
+			oos = new ObjectOutputStream(fos);
+			synchronized (aggregateList) {
+				oos.writeInt(aggregateList.size());
+				for (Aggregate aggr : aggregateList)
+					aggr.writeExternal(oos);
+			}
+		} finally {
+			if (oos != null)
+				oos.close();
+			if (fos != null)
+				fos.close();
+		}
 	}
 }
